@@ -7,6 +7,7 @@ Griffith ChangeLog
 
 2009-07-03  Michael Jahn
 	* updated IMDb plugin
+	* added Ant Movie Catalog import plugin
 
 ---- 0.10-beta3 ----
 
